Fix header css not being included in legacy.css
It was looking broken on old iphones still.

--- a/base.css
+++ b/base.css
@@ -298,3 +298,94 @@ seo-block {
   white-space: nowrap;
   border: 0;
 }
+
+header {
+  /* See site-header.js */
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 1.5rem;
+  position: fixed;
+  inset: 0 0 auto;
+  z-index: 2;
+  --nav-button-color: var(--color-red);
+  &.hide {
+    transform: translateY(-100%);
+  }
+  nav-menu {
+    opacity: 0;
+    position: fixed;
+    inset: 0;
+    padding: 5rem 3rem;
+    background-color: var(--color-red);
+    &,
+    details:has(> &)::details-content {
+      transition: all var(--animation-time-short) ease-in-out;
+      transition-behavior: allow-discrete;
+    }
+    details[open] & {
+      opacity: 1;
+      body:has(&) {
+        overflow: hidden;
+      }
+    }
+  }
+  & .bg-pattern {
+    z-index: -1;
+  }
+  & nav {
+    display: flex;
+    flex-flow: column;
+    align-items: center;
+    justify-content: start;
+    gap: 3rem;
+    color: var(--color-light);
+    & > * {
+      display: flex;
+      gap: 1rem;
+      align-items: start;
+    }
+  }
+
+  .summary-hamburger-button {
+    --line-color: var(--color-red);
+    width: 2rem;
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    cursor: pointer;
+    position: relative;
+    z-index: 1;
+    outline: none;
+    -webkit-touch-callout: none;
+    user-select: none;
+    -webkit-tap-highlight-color: transparent;
+    list-style: none;
+    appearance: none;
+
+    &::-webkit-details-marker {
+      display: none; /* iOS fix */
+    }
+    &::marker {
+      content: none;
+    }
+    details[open] & {
+      --line-color: var(--color-light);
+    }
+  }
+  .summary-hamburger-button .line {
+    height: 3px;
+    background: var(--line-color);
+    border-radius: 2px;
+    transition: all var(--animation-time-short) ease-out;
+  }
+  details[open] .line:nth-of-type(1) {
+    transform: translateY(225%) rotate(-45deg);
+  }
+  details[open] .line:nth-of-type(2) {
+    opacity: 0;
+  }
+  details[open] .line:nth-of-type(3) {
+    transform: translateY(-225%) rotate(45deg);
+  }
+}
